OMG its Duke Nukem himself commenting on the game. Such an honor!
playSound works now.
Added sound for destroying a ship.